Added and styled application buttons

--- a/index.html
+++ b/index.html
@@ -32,15 +32,23 @@
     <nav class="sidebar">
         <div class="menu-bar">
             <div class="menu">
-                <li class="nav-links">
-                    <i class='bx bx-check-circle'></i>
-                    <span class="text nav-text">Todo</span>
-                </li>
                 <ul class="menu-links">
                     <li class="nav-links">
                         <a href="#">
-                            <i class='bx bx-check-circle'></i>
-                            <span class="text nav-text">Todo</span>
+                            <i class='bx bx-check-circle bx-sm'></i>
+                            <span class="nav-text">Todo List</span>
+                        </a>
+                    </li>
+                    <li class="nav-links">
+                        <a href="#">
+                            <i class='bx bx-qr bx-sm'></i>
+                            <span class="nav-text">QR Code Generator</span>
+                        </a>
+                    </li>
+                    <li class="nav-links">
+                        <a href="#">
+                            <i class='bx bxl-twitter bx-sm'></i>
+                            <span class="nav-text">Twitter Stream</span>
                         </a>
                     </li>
                 </ul>
