Restructured and renamed repo

--- a/sidebar-html-css/index.html
+++ b/sidebar-html-css/index.html
@@ -49,6 +49,12 @@
 						<span class="nav-text">Twitter Stream</span>
 					</a>
 				</li>
+				<li class="nav-links">
+					<a href="#">
+						<i class='bx bx-log-out bx-sm'></i>
+						<span class="nav-text">Logout</span>
+					</a>
+				</li>
 			</ul>
         </nav>
         <section>
