--- a/login-html-css/index.html
+++ b/login-html-css/index.html
@@ -19,14 +19,21 @@
                         <input type="text" name="username" placeholder="Email">
                         <input type="password" name="password" placeholder="Password">
                         <button type="submit">Login</button>
-                        <p>Don't have an account? <a class="sign-up" href="#">Sign up</a></p>
+                        <p>Don't have an account? <a class="sign-up" href="http://localhost:5500/login-html-css/signup.html">Sign up</a></p>
                         <hr>
                         <p class="sign-in">Or sign in with<a class="google-logo" href="#"><i class='bx bxl-google bx-sm'></i></a></p>
                         
                     </form>
                 </div>
             </div>
-
-    </section> 
+    </section>
+    <footer>
+        <form method="get" action="http://localhost:8000/logout">
+            <button style="width: 100px;" type="submit">Logout</button>
+        </form>
+        <form method="get" action="http://localhost:8000/api/v1/user/1">
+            <button style="width: 100px;" type="submit">Users1</button>
+        </form>       
+    </footer>
 </body>
 </html>
