--- a/login-html-css/index.html
+++ b/login-html-css/index.html
@@ -16,7 +16,9 @@
                 <div class="inner-login">
                     Login
                     <input type="text" id="email" name="username" placeholder="Email">
+                    <label id="invalid-email" class="invalid-input" for="email">Please enter a valid email address.</label>
                     <input type="password" id="password" name="password" placeholder="Password">
+                    <label id="invalid-password" class="invalid-input" for="password">Your password must contain between 4 and 20 characters.</label>
                     <button onclick="loginUser()">Login</button>
                     <p>Don't have an account? <a class="sign-up" href="http://localhost:5500/login-html-css/signup.html">Sign up</a></p>
                     <hr>
