Added failed login messages Added signup validations

--- a/login-html-css/index.html
+++ b/login-html-css/index.html
@@ -19,6 +19,7 @@
                     <label id="invalid-email" class="invalid-input" for="email">Please enter a valid email address.</label>
                     <input type="password" id="password" name="password" placeholder="Password">
                     <label id="invalid-password" class="invalid-input" for="password">Your password must contain between 4 and 20 characters.</label>
+                    <label id="failed-login" class="invalid-input"></label>
                     <button onclick="loginUser()">Login</button>
                     <p>Don't have an account? <a class="sign-up" href="http://localhost:5500/login-html-css/signup.html">Sign up</a></p>
                     <hr>
