--- a/login-html-css/signup.html
+++ b/login-html-css/signup.html
@@ -16,9 +16,11 @@
             <div class="inner-login">
                 Create your account
                 <input type="text" id="email" placeholder="Email">
+                <label id="invalid-email" class="invalid-input" for="email">Please enter a valid email address.</label>
                 <input type="text" id="username" placeholder="Username">
-                <input type="password" id="password" placeholder="Password (6 - 12 characters)">
-                <input type="password" placeholder="Confirm password">
+                <label id="invalid-username" class="invalid-input" for="username">Please enter a username.</label>
+                <input type="password" id="password" placeholder="Password (4 - 20 characters)">
+                <label id="invalid-password" class="invalid-input" for="password">Your password must contain between 4 and 20 characters.</label>
                 <button onclick="createAccount()">Create account</button>
                 <p>Already have an account? <a class="sign-up" href="http://localhost:5500/login-html-css/index.html">Sign in</a></p>
                 <hr>
