--- a/login-html-css/app-hub.html
+++ b/login-html-css/app-hub.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app-hub-style.css">
+    <script src="script.js"></script>
 	
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	
@@ -50,7 +51,7 @@
 					</a>
 				</li>
 				<li class="nav-links">
-					<a href="#">
+					<a href="#" onclick="logout()">
 						<i class='bx bx-log-out bx-sm'></i>
 						<span class="nav-text">Logout</span>
 					</a>
